tests/paczka1/small_fuzzy/13829818.err
Error in line 6: 008t S163 90,8
Error in line 10: E5MzauyjJn5 S163 47,1
